--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,6 +13,7 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    "composite": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
